fixed permissions and instrumentation